--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,8 @@
   }
   
   .calc-btn{
+    margin: 0;
+    padding: 0;
     border:.1px solid #6e6e6e25;
     text-align:center;
     background-color: inherit;
