--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
     width:350px;
     height:550px;
     border:.2px solid #6e6e6e41;
+    border-radius: 3px;
     margin:10vh auto 2vh auto;
     display:grid;
     grid-template-rows:125px 1fr;
@@ -26,13 +27,16 @@
     box-shadow: 15px 15px 1px 5px #0000001a;
   }
   .displayWrapper{
-    background-color: white
+    background-color: white;
+    border-radius: 3px;
   }
   .displayWrapper input{   
     float:right;
     display:block;
     border: none;
     padding-right: 20px;
+    text-overflow: ellipsis;
+    direction: rtl;
   }
   .resultDisplay  {
     /*border: none;*/
@@ -66,8 +70,10 @@
     font-size: 20px;
   }
   .calc-btn:hover{
-    text-align:center;
     background-color: #dfdfdf70;
+  }
+  .calc-btn:active{
+    background-color: #d4d4d486;
   }
   .big-btn{
     grid-row:5/6;
@@ -79,4 +85,7 @@
   }
   .lst-col:hover{
     background-color: #f8a01bf3;
+  }
+  .lst-col:active{
+    background-color: #f09711f3;
   }
